Se realizan ajustes en el nav para que sea responsivo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="nav__toggle">
                     <i class="fa-solid fa-bars"></i>
                 </button>
-                <ul class="nav-menu">
+                <ul class="nav-menu ">
                     <li class="nav-item">
                         <a class="nav-link" href="#servicios">Servicios</a>
                     </li>
@@ -44,7 +44,7 @@
     <!-- SERVICIOS -->
 
     <section>
-        <div class="container__servicios">
+        <div class="container__servicios" id="servicios">
             <div class="servicios">
                 <div class="icon-group">
                     <i class="fa-solid fa-truck-fast"></i>
@@ -88,7 +88,10 @@
             </div>
         </div>
     </section>
-    <script src="./js/menu.js"></script>
+
+    
+
+    <script src="./js/navbar.js"></script>
 </body>
 
 </html>
