Ajuste validación campo email

--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
             <form class="form__container">
                 <label>
                     <input type="email" class="email" name="email" placeholder="ingresa aquí tu correo" minlength="5" required>
+                    <span></span>
                 </label>
                 <br>
-                <span class="error" id="emailError"></span>
+                <!-- <span class="error" id="emailError"></span> -->
                 <button class="button__sendEmail" id="enviarBtn" type="submit" disabled>Enviar</button>
             </form>
             <div id="myModal" class="container__modal">
