ajustes validación campo email

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./img/mandala-favicon.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/nav-desc-email-video-styles.css" />
     <title>Mandalass Bisutería</title>
 </head>
 
@@ -96,7 +96,8 @@
             <h1><u>Entérate de nuestras colecciones</u></h1>
             <form class="form__container">
                 <label>
-                    <input type="email" class="email" name="email" placeholder="ingresa aquí tu correo" minlength="5" required>
+                    <input type="email" class="email" name="email" placeholder="ingresa aquí tu correo" minlength="5"
+                        required>
                     <span></span>
                 </label>
                 <br>
@@ -107,10 +108,10 @@
                 <div class="modal-content">
                     <span class="close"><i class="fa-solid fa-xmark"></i></span>
                     <div class="mensaje">
-                        <p>¡Genial! 💎 Gracias por enviar tu correo electrónico.<br>Ahora estarás al tanto de nuestras
+                        <p>¡Genial! 💎 Gracias por enviar tu correo electrónico.<br>Ahora   estarás al tanto de nuestras
                             nuevas colecciones,<br> llenas de elegancia y estilo.<br><br>(✿◡‿◡) *:･ﾟ✧☆</p>
                     </div>
-                </div> 
+                </div>
             </div>
         </div>
     </section>
