Creación de sección video

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#nosotros">Nosotros</a>
+                        <a class="nav-link" href="#tu_marca">Tu-Marca</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#galeria">Galería</a>
@@ -108,10 +108,25 @@
                 <div class="modal-content">
                     <span class="close"><i class="fa-solid fa-xmark"></i></span>
                     <div class="mensaje">
-                        <p>¡Genial! 💎 Gracias por enviar tu correo electrónico.<br>Ahora   estarás al tanto de nuestras
+                        <p>¡Genial! 💎 Gracias por enviar tu correo electrónico.<br>Ahora estarás al tanto de nuestras
                             nuevas colecciones,<br> llenas de elegancia y estilo.<br><br>(✿◡‿◡) *:･ﾟ✧☆</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sección Video Nosotros -->
+
+    <section>
+        <div class="video__container" id="tu_marca">
+            <h1 class="video__title"><u>Cómo crear tu propia marca</u></h1>
+            <div class="container__iframe">
+                <iframe src="https://www.youtube.com/embed/MjHLaMxcmG8?si=DYOS8fiKQV4QQnLm"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
             </div>
         </div>
     </section>
