Creación sección Footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./img/mandala-favicon.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/footer-style.css">
     <link rel="stylesheet" href="./css/nav-desc-email-video-styles.css" />
     <title>Mandalass Bisutería</title>
 </head>
@@ -130,6 +131,31 @@
             </div>
         </div>
     </section>
+
+    <!-- Sección Footer -->
+
+    <footer>
+        <div class="container__footer">
+            <div class="img_footer">
+                <img src="./img/img_footer.png" alt="Mandala">
+            </div>
+            <div class="contenido_footer">
+                <div class="parrafo">
+                    <p>Challenge AluraGeek</p>
+                    <p>Elaborado por Biviana Agudelo</p>
+                    <p>2024</p>
+                </div>
+                <div class="icon__group">
+                    <a href="https://www.linkedin.com/in/bivianaagudelo/" target="_blank" class="icon_linkedin">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/BivianaAgudelo" target="_blank" class="icon_github">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>    
 
     <script src="./js/navbar-sendEmail.js"></script>
 </body>
