--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/footer-style.css">
+    <link rel="stylesheet" href="./css/galeria-style.css">
     <link rel="stylesheet" href="./css/nav-desc-email-video-styles.css" />
     <title>Mandalass Bisutería</title>
 </head>
@@ -123,18 +124,209 @@
         <div class="video__container" id="tu_marca">
             <h1 class="video__title"><u>Cómo crear tu propia marca</u></h1>
             <div class="container__iframe">
-                <iframe src="https://www.youtube.com/embed/MjHLaMxcmG8?si=DYOS8fiKQV4QQnLm"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-            </iframe>
+                <iframe src="https://www.youtube.com/embed/MjHLaMxcmG8?si=DYOS8fiKQV4QQnLm" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
             </div>
         </div>
     </section>
 
+    <!-- Sección Galería -->
+
+    <main class="main_container" id="galeria">
+        <h1 class="title_galeria"><u>Galería</u></h1>
+        <div class="section_container">
+            <section class="mis_productos">
+                <h1>Mis Productos</h1>
+                <div class="galeria__container" data-product>
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img_container">
+                            <img src="./img/collar.jpg" alt="Collar perlas">
+                        </div>
+                        <div class="card_container_info">
+                            <p>Collar</p>
+                            <div class="card_container_value">
+                                <p>$ 20</p>
+                                <button class="boton_eliminar">
+                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="agregar_producto">
+                <h1>Agregar Producto</h1>
+                <form class="form_container_galeria" data-form>
+                    <input data-name placeholder="Nombre Producto..." type="text">
+                    <input data-price placeholder="Precio Producto..." type="text">
+                    <input data-image placeholder="Imagen Producto..." type="text">
+
+                    <div class="button_container_galeria">
+                        <button type="submit" class="button_submit" id="button">Enviar...</button>
+                        <button type="submit" class="button_submit" id="button">Limpiar...</button>
+                    </div>
+                </form>
+            </section>
+        </div>
+    </main>
+
     <!-- Sección Footer -->
 
-    <footer>
+    <footer id="contactenos">
         <div class="container__footer">
             <div class="img_footer">
                 <img src="./img/img_footer.png" alt="Mandala">
@@ -143,7 +335,7 @@
                 <div class="parrafo">
                     <p>Challenge AluraGeek</p>
                     <p>Elaborado por Biviana Agudelo</p>
-                    <p>2024</p>
+                    <p>&copy; 2024</p>
                 </div>
                 <div class="icon__group">
                     <a href="https://www.linkedin.com/in/bivianaagudelo/" target="_blank" class="icon_linkedin">
@@ -155,7 +347,7 @@
                 </div>
             </div>
         </div>
-    </footer>    
+    </footer>
 
     <script src="./js/navbar-sendEmail.js"></script>
 </body>
