Se aplican estilos a la sección galería

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/footer-style.css">
     <link rel="stylesheet" href="./css/galeria-style.css">
+    <link rel="stylesheet" href="./css/formulario-style.css">
     <link rel="stylesheet" href="./css/nav-desc-email-video-styles.css" />
     <title>Mandalass Bisutería</title>
 </head>
@@ -141,36 +142,6 @@
             <section class="mis_productos">
                 <h1>Mis Productos</h1>
                 <div class="galeria__container" data-product>
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="card">
                         <div class="img_container">
                             <img src="./img/collar.jpg" alt="Collar perlas">
