Se agregan estilos al formulario

--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
                 <form class="form_container_galeria" data-form>
                     <input data-name placeholder="Nombre Producto..." type="text">
                     <input data-price placeholder="Precio Producto..." type="text">
-                    <input data-image placeholder="Imagen Producto..." type="text">
+                    <input data-image placeholder="Url Imagen Producto..." type="text">
 
                     <div class="button_container_galeria">
-                        <button type="submit" class="button_submit" id="button">Enviar...</button>
-                        <button type="submit" class="button_submit" id="button">Limpiar...</button>
+                        <button type="submit" class="button_submit" id="button">Enviar</button>
+                        <button type="submit" class="button_submit" id="button">Limpiar</button>
                     </div>
                 </form>
             </section>
