Ajuste de estilos

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
                     <div class="button_container_galeria">
                         <button type="submit" class="button_submit" id="button">Enviar</button>
-                        <button type="submit" class="button_submit" id="button">Limpiar</button>
+                        <button type="reset" class="button_clear" id="button">Limpiar</button>
                     </div>
                 </form>
             </section>
