Conexión API y método POST

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <section class="mis_productos">
                 <h1>Mis Productos</h1>
                 <div class="galeria__container" data-product>
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="img_container">
                             <img src="./img/collar.jpg" alt="Collar perlas">
                         </div>
@@ -150,132 +150,12 @@
                             <p>Collar</p>
                             <div class="card_container_value">
                                 <p>$ 20</p>
-                                <button class="boton_eliminar">
+                                <button class="boton_eliminar" data-id= "${id}">
                                     <img src="./img/eliminar-carrito.png" alt="Eliminar">
                                 </button>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img_container">
-                            <img src="./img/collar.jpg" alt="Collar perlas">
-                        </div>
-                        <div class="card_container_info">
-                            <p>Collar</p>
-                            <div class="card_container_value">
-                                <p>$ 20</p>
-                                <button class="boton_eliminar">
-                                    <img src="./img/eliminar-carrito.png" alt="Eliminar">
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
@@ -321,6 +201,8 @@
     </footer>
 
     <script src="./js/navbar-sendEmail.js"></script>
+    <script src="./js/controllers/main.js" type="module"></script>
+    <!-- <script src="./js/services/conexionAPI.js"></script> -->
 </body>
 
 </html>
