Implementación del método DELETE

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <p>Collar</p>
                             <div class="card_container_value">
                                 <p>$ 20</p>
-                                <button class="boton_eliminar" data-id= "${id}">
+                                <button class="boton_eliminar" data-id>
                                     <img src="./img/eliminar-carrito.png" alt="Eliminar">
                                 </button>
                             </div>
